--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="JW-exercises.js"></script>
+    <script src="chap3-5.js"></script>
+    <script src="chap6-8.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -13,5 +14,10 @@
     <button onclick = "chapter41()">chapter4 q2</button>
     <button onclick = "chapter5()">chapter5 q1</button>
     <button onclick = "chapter51()">chapter5 q2</button>
+    <button onclick = "chapter6()">chapter6 q3</button>
+    <button onclick = "chapter61()">chapter6 q4</button>
+    <button onclick = "chapter7()">chapter7 q3</button>
+    <button onclick = "chapter8()">chapter8 q1</button>
+
 </body>
 </html>
