--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="chap3-5.js"></script>
     <script src="chap6-8.js"></script>
+    <script src="in-class-exercises.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -18,6 +19,5 @@
     <button onclick = "chapter61()">chapter6 q4</button>
     <button onclick = "chapter7()">chapter7 q3</button>
     <button onclick = "chapter8()">chapter8 q1</button>
-
 </body>
 </html>
