--- a/JS-way/index.html
+++ b/JS-way/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="chap3-5.js"></script>
-    <script src="chap6-8.js"></script>
-    <script src="in-class-exercises.js"></script>
+    <script src="/JS-way/chap3-5.js"></script>
+    <script src="/JS-way/chap6-8.js"></script>
+    <script src="/JS-way/in-class-exercises.js"></script>
     <title>Document</title>
 </head>
 <body>
