dog image api exercise

--- a/dog-api/index.html
+++ b/dog-api/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/dog-api/style.css">
 
-    <title>random dog image</title>
+    <title>random dogs</title>
 </head>
 <body>
-    refresh for a new image!
-    <img src = "" id="dogImage"></img>
+    <div class ="center">
+
+        <button id = "btn">Click for a new image!</button>
+        <div class = "img-container"><img src = "" id="dogImage"></img></div>
+    </div>
     <script src = "/dog-api/script.js"></script>
 </body>
 </html>
