--- a/rick-morty-api/index.html
+++ b/rick-morty-api/index.html
@@ -16,7 +16,7 @@
         <button id = "dead">Dead</button>
         <button id = "unknown">Unknown</button>
 
-        <div>Score: <p style="display:inline" id = "score"></p></div>
+        <div>Score: <p id = "score"></p></div>
     </div>
     <script src="/rick-morty-api/script.js"></script>
 </body>
